# qxneur

./: .gitignore  CMakeLists.txt  QXLayoutIndicator.conf  README.md  TODO  configure  distclean
CMake/: CompilerFlags.cmake  FindXCB.cmake  FindXKBCommonX11.cmake  common.cmake
images/: images.qrc
src/: KbdInfo.h  KbdLayout.cpp  KbdLayout.h  PropertyMapper.cpp  PropertyMapper.h  PropertyMapperPrivate.h  QXNKeyboard.cpp  QXNKeyboard.h  QXNKeyboard_p.h  QXNLanguage.cpp  QXNLanguage.h  QXNMenu.cpp  QXNMenu.h  QXNTrayIcon.cpp  QXNTrayIcon.h  QXNeur.cpp  QXNeur.h  main.cpp
src/Config/: AbbreviationEditDialog.cpp  ApplicationSettingsDialog.cpp  ApplicationSettingsDialog.h  ApplicationSettingsDialog.ui  QXNAbbreviationEditDialog.cpp  QXNAbbreviationEditDialog.h  QXNAbbreviationEditDialog.ui  QXNApplicationSettingsDialog.cpp  QXNApplicationSettingsDialog.h  QXNApplicationSettingsDialog.ui  QXNApplicationsMode.h  QXNApplicationsModel.cpp  QXNApplicationsModel.h  QXNApplicationsModelPrivate.h  QXNConfig.cpp  QXNConfig.h  QXNConfigDialog.cpp  QXNConfigDialog.h  QXNConfigDialog.ui  QXNModelRoles.h
translations/: qxneur_ru.ts
